test/fail/mixin-system-redundant.mo
import MixinCounter "mixins/Counter";

persistent actor {
  include MixinCounter<system>();
};
